CSS/ISI_Web.css
* {
    margin: 0;
    padding: 0;
    font-family: poppins;
}

html {
    font-family: poppins;
    scroll-behavior: smooth;
    background: #f1f1f1;
  }
img {
    width: 100%;
    height: auto;
    margin: 2em 0;
}
p {
    margin: 1em 0;
}
ul {
    margin-left: 4em;
}
.low-tools ul, .low-skills ul {
    list-style-type: none;
}
.left-container ul {
    margin: 0;
}
.lower-skill-grid ul {
    margin: 0;
}
.inner-content ul, .inner-content p  {
    margin-left: 2em;
}
.left-container ul>a {
    text-decoration: none;
    color: grey;
}

.left-container ul>a:hover {
    color: black;
}

.main-container {
    display: grid;
    grid-template-columns: 20% 35% 35%;
    grid-gap: 5%;
}

.left-container h1{
    font-size: 16px;
    position: fixed;
    left: 5%;
    top: 25%;
}
.left-container ul{
    position: fixed;
    width: 25%;
    top: 30%;
    list-style: none;
    left: 5%;
}

.left-container li {
    text-transform: uppercase;
}

.middle-container h4 {
    margin: 1em 0;
}
.info-block {
    position: fixed;
    width: 500px;
    top: 20%;
    right: 5%;
}
.inner-info-grid {
    display: grid;
    grid-template-columns: 50% 50%;
}

.lower-skill-grid {
    display: grid;
    grid-template-columns: 50% 50%;
}

.middle-container h1 {
    margin-top: 3em;
}

.inner-info-grid a {
    text-decoration: none;
    color: black;
}

.inner-info-grid, .lower-skill-grid {
    border-top: 1px black solid;
}

.middle-container iframe {
    margin: 2em auto;
    z-index: 10000000;
    position: relative;
}

.rt-logo {
    width: 40%;
}

@media only screen and (max-width: 1560px) {
    .info-block {
        width: 420px;
    }
  }

  @media only screen and (max-width: 1300px) {
    .left-container {
        display: none;
    }
    .main-container {
        display: block;
        margin: 0 auto;
        width: 85%;
    }
    .info-block {
            position: unset;
            width: 100%;
    }
  }

